Di 24. Mai 08:46:09 CEST 2011
* Renamed modules config options
        daemon.modulesruninterval -> daemon.modules.runiterval 
        daemon.modulesdir -> daemon.modules.dir 

Mo 23. Mai 08:30:06 CEST 2011
* Added TODO list

Fr 13. Mai 18:21:08 CEST 2011
* Released PerlDaemon v1.1
* Major refactoring
* Added warn message support
* Added 'restart' option
* Added README file including a quick starting guide
* Added dynamic loadable module support including an example

Do 17. Mär 09:10:38 CET 2011
* Renamed DaemonLogic into RunModule
* Added ./conf and ./PerlDaemon subdirs and moved stuff into it
* Added to all Modules the PerlDaemon:: prefix

Fr 11. Mär 08:54:39 CET 2011
* New property: daemon.loopinterval

Mo 7. Mär 21:43:23 CET 2011
* Introduced simple OOP to the PerlDaemon 
* Added a Logger and a DaemonLogic class.

So 6. Feb 13:14:32 CET 2011
* PerlDaemon is now CamelCase

So 6. Feb 12:56:44 CET 2011
* Initial Version v1.0 Released
