@@ -6,4 +6,4 @@ daemon.pidfile = ./run/perldaemon.pid
 daemon.logfile = ./log/perldaemon.log
 daemon.modules.dir = ./lib/PerlDaemonModules
 daemon.modules.runinterval = 3
-daemon.daemonize = no
+daemon.daemonize = yes
