@@ -1,3 +1,9 @@
+Mo 30. Mai 21:10:53 CEST 2011
+* Added passing of startup options. E.g. 
+        ./control start daemon.daemonize=no daemon.loopinterval=10
+  starts perldaemon in foreground w/ a loopinterval of 10 seconds.
+  It's possible to overwrite all defaults specified in perldaemon.conf
+
 Di 24. Mai 08:46:09 CEST 2011
 * Renamed modules config options
         daemon.modulesruninterval -> daemon.modules.runiterval 
